# ockam

implementations/e/applications/ockam/: .gitignore  mix.exs
implementations/e/applications/ockam/lib/ockam/vault/: software.ex
implementations/e/applications/ockam/native/vault/software/: nifs.c
implementations/e/applications/ockam/test/ockam/vault/: software_test.exs
implementations/rust/: Cargo.toml
implementations/rust/message/src/: message.rs
implementations/rust/router/src/: router.rs
implementations/rust/vault/src/ffi/: types.rs
implementations/rust/xport/: Cargo.toml
